--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="flex flex-wrap -m-4">
         <div class="p-4 lg:w-1/4 md:w-1/2">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://media-exp2.licdn.com/dms/image/C5603AQHZm1K_iVsXsQ/profile-displayphoto-shrink_800_800/0/1654781921838?e=1660176000&v=beta&t=VSiDUpBN64HTPflkfysTPavrSi-0nnA_RjaLYmpn8Ic">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="images/1654781921838.jpg">
             <div class="w-full">
               <h2 class="title-font font-medium text-lg text-white">Abhishek Singh Maurya</h2>
               <h3 class="text-gray-500 mb-3">21CS10001</h3>
@@ -117,7 +117,7 @@
         </div>
         <div class="p-4 lg:w-1/4 md:w-1/2">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://media-exp2.licdn.com/dms/image/C4D03AQEAEu3-3x9Dgg/profile-displayphoto-shrink_400_400/0/1645992483632?e=1660176000&v=beta&t=TxDG66y7ndc_vm5ShIJYjdB-XUlSyZwzy0LXhju1Gys">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="images/1645992483632.jpg">
             <div class="w-full">
               <h2 class="title-font font-medium text-lg text-white">Ishan Jindal</h2>
               <h3 class="text-gray-500 mb-3">21CY10018</h3>
@@ -144,7 +144,7 @@
         </div>
         <div class="p-4 lg:w-1/4 md:w-1/2">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://media-exp2.licdn.com/dms/image/C4D03AQHI0C2SYeDZAA/profile-displayphoto-shrink_400_400/0/1648219493179?e=1660176000&v=beta&t=b7_-QPfHcR60XlJ2s2Ya4x5AlaoTFDnK_XU1VucrQuw">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="images/1648219493179.jpg">
             <div class="w-full">
               <h2 class="title-font font-medium text-lg text-white">Archisha Gupta</h2>
               <h3 class="text-gray-500 mb-3">21EE30007</h3>
