--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="mb-8 leading-relaxed">The major objective of this project is to help disabled people who would be able to do their activities with the robotic hand.
           .</p>
         <div class="flex justify-center">
-          <a href="#"><button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Download PPT</button> </a>
+          <a target="_blank"href="https://docs.google.com/presentation/d/1bVYLR5HX0HOPF3DPWZ4BN_Ol91uSmRRu/edit"><button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Download PPT</button> </a>
           <a target="_blank"href="https://youtu.be/NQBloc6VoMM"><button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Watch Video</button></a>
 
         </div>
