--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+ 
   <header class="nav-bar text-gray-400 bg-gray-900 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
@@ -171,8 +172,8 @@
           <div class="flex relative">
             <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="images/Screenshot 2022-06-09 194723.png">
             <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
-              <h2 class="tracking-widest text-sm title-font font-medium text-blue-400 mb-1">THE SUBTITLE</h2>
-              <h1 class="title-font text-lg font-medium text-white mb-3">Flex sensor</h1>
+              <h2 class="tracking-widest text-sm title-font font-medium text-blue-400 mb-1">Flex sensor</h2>
+              <h1 class="title-font text-lg font-medium text-white mb-3"></h1>
               <p class="leading-relaxed">A flex sensor or bend sensor is a sensor that measures the amount of deflection or bending.
                 It is very flexible and small like a thin sheet.</p>
             </div>
@@ -184,7 +185,7 @@
             <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
               <h2 class="tracking-widest text-sm title-font font-medium text-blue-400 mb-1">Cad Model</h2>
               <h1 class="title-font text-lg font-medium text-white mb-3"></h1>
-              <p class="leading-relaxed">The apparatus could be potentially used as a bionic prosthetic. At the moment, this project will give the students insight into various joints and actuators and controlling them with a microcontroller.
+              <p class="leading-relaxed">The apparatus could be potentially used as a bionic prosthetic. At the moment, this project will give the students insight into various joints and actuators 
                 .</p>
             </div>
           </div>
@@ -195,7 +196,7 @@
             <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-800 bg-gray-900 opacity-0 hover:opacity-100">
               <h2 class="tracking-widest text-sm title-font font-medium text-blue-400 mb-1">Main Circuit </h2>
               <h1 class="title-font text-lg font-medium text-white mb-3"></h1>
-              <p class="leading-relaxed">Then the micro controller gives the commands to the servo motors which pull the strings to make the prosthetic hand function. Flex sensors and servomotors are the major components of the project controlled by microcontroller ( Ardiuno UNO ie., ATMEGA 328).
+              <p class="leading-relaxed">Then the micro controller gives the commands to the servo motors which pull the strings to make the prosthetic hand function. 
                 .</p>
             </div>
           </div>
@@ -207,7 +208,7 @@
               <h2 class="tracking-widest text-sm title-font font-medium text-blue-400 mb-1">Arduino</h2>
               <h1 class="title-font text-lg font-medium text-white mb-3"></h1>
               <p class="leading-relaxed">Arduino UNO is a low-cost, flexible, and easy-to-use programmable open-source microcontroller board that can be integrated into a variety of electronic projects.
-                Arduino boards are able to read inputs - light on a sensor, a finger on a button, or a Twitter message - and turn it into an output - activating a motor, turning on an LED, publishing something online
+                Arduino boards are able to read inputs - open-source microcontroller board that
                 </p>
             </div>
           </div>
@@ -219,7 +220,7 @@
               <h2 class="tracking-widest text-sm title-font font-medium text-blue-400 mb-1">Software Used</h2>
               <h1 class="title-font text-lg font-medium text-white mb-3"></h1>
               <p class="leading-relaxed">The existing system, that is the bionic and mionic hands are very costly which can’t be afforded by most of the people.
-                These systems also expect either high power batteries which might harm the subject or the physical work of the subject which will be tiresome. Along with this the side effects of having suffocated sockets are also noticeable.
+                These systems also expect either high power batteries which might harm the subject or the physical work of the subject which will be tiresome. 
 
                 </p>
             </div>
@@ -232,7 +233,7 @@
               <h2 class="tracking-widest text-sm title-font font-medium text-blue-400 mb-1">Main Code</h2>
               <h1 class="title-font text-lg font-medium text-white mb-3"></h1>
               <p class="leading-relaxed">Our prototype makes use of simple low power batteries along with the simple movement of the fingers of the subject’s healthy hand
-                A flex sensor will be able to convert the bending changes into varying resistance. By using this feature, we will be able to use the action of the active human hand and copy its activity and replicate it in the prosthetic hand.
+                A flex sensor will be able to convert the bending changes into varying resistance. By using this feature, 
 
                 .</p>
             </div>
@@ -241,5 +242,45 @@
       </div>
     </div>
   </section>
+
+  <footer class="text-gray-400 bg-gray-900 body-font">
+    <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+      <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" class="w-10 h-10 text-white p-2 -700 rounded-full" viewBox="0 0 24 24">
+          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+        </svg>
+        <span class="ml-5 text-xl">TEAM_VORTEX</span>
+      </a>
+      <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2022 TEAM_VORTEX —
+        <a href="https://twitter.com/knyttneve" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer">@abh2004</a>
+      </p>
+      <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+        <a class="text-gray-400">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-400">
+          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+            <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+            <circle cx="4" cy="4" r="2" stroke="none"></circle>
+          </svg>
+        </a>
+      </span>
+    </div>
+  </footer>
+  
+
 </body>
 </html>
